--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -16,16 +16,26 @@
 
 module(
   name = "rules_nushell",
-  version = "0.0.1",
-  toolchains_to_register = [
-    "//toolchain:all",
-  ],
+  version = "0.0.2",
 )
+
+register_toolchains("//toolchain:all")
 
 bazel_dep(
   name = "bazel_skylib",
-  version = "1.2.1",
+  version = "1.4.1",
+)
+
+bazel_dep(
+  name = "platforms",
+  version = "0.0.6",
 )
 
 nu = use_extension("//bzlmod:nu.bzl", "nu")
-use_repo(nu, "nushell")
+use_repo(nu,
+  "nushell-windows-x86_64",
+  "nushell-linux-arm64",
+  "nushell-linux-x86_64",
+  "nushell-macos-arm64",
+  "nushell-macos-x86_64",
+)
